# MAXIS

./: .gitignore  README.md  cyber_design_system.html
docs/: DEMO_VERIFICATION.md  MAXIS_MASTER_BRIEF.md  NOTION_PROOF_PLAN.md
maxis-anchor/: .gitignore  Anchor.toml  README.md
maxis-anchor/keys/: README.md  program-devnet.json
maxis-anchor/programs/maxis/: Cargo.toml
maxis-anchor/programs/maxis/src/: lib.rs
maxis-anchor/scripts/: build-sbf.sh  prep-program-keypair.sh
maxis-api/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
maxis-api/prisma/: schema.prisma  seed.ts
maxis-api/scripts/: check-db.ts  verify-demo.mjs  verify-maxis-demo.sh
maxis-api/src/: auth-lib.ts  express.d.ts  server.js  server.ts  solana-verify.js  solana-verify.ts  types.ts
maxis-frontend/: .env.local.example  .gitignore  FRONTEND-SPEC.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
maxis-frontend/src/: routeTree.gen.ts  router.tsx  styles.css
maxis-frontend/src/components/maxis/: DashboardSidebar.tsx  Footer.tsx  HudPanel.tsx  NavBar.tsx
maxis-frontend/src/lib/: api-user-errors.ts  api.ts  auth.ts  dashboard-profile.ts  demo-session.ts  production-api-default.ts  solana-wallet.ts
maxis-frontend/src/routes/: __root.tsx  dashboard.catalog.tsx  dashboard.orders.tsx  dashboard.settings.tsx  dashboard.tsx  developers.tsx  index.tsx  login.tsx  register.tsx
shared/: maxis-demo-data.ts
