[package]
name = "maxis"
version = "0.1.0"
description = "MAXIS — on-chain checkout commit (merchant + USDC intent) for Frontier / agent commerce demos"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "maxis"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
